--- a/Seaborn2.ipynb
+++ b/Seaborn2.ipynb
@@ -380,7 +380,7 @@
         "# The benefit from swarmplot is that we can see the magnitude of data at any point and they don't overlap. \n",
         "sns.catplot(x = 'sex', y = 'total_bill', data = df, kind = 'swarm')\n",
         "plt.show()  \n",
-        "# Ask student what is the point at which the magnitude of total bil is highest for Male. The answer is at between 17-18. "
+        "#The magnitude of total bil is highest for Male. The answer is at between 17-18. "
       ]
     },
     {
@@ -459,7 +459,7 @@
       "source": [
         "# Boxplot \n",
         "\n",
-        "### It is having concept of quartiles which basically means dividing the data in 4 parts. Explain it to student like student who are scoring between 75-100 marks they'll be in fourth quartile and so on. Generally what happens is that data is in 2nd or 3rd quartile that means in between. "
+        "### It is having concept of quartiles which basically means dividing the data in 4 parts who are scoring between 75-100 marks they'll be in fourth quartile and so on. Generally what happens is that data is in 2nd or 3rd quartile that means in between. "
       ]
     },
     {
@@ -747,7 +747,7 @@
       ],
       "source": [
         "sns.catplot(x = 'species', y = 'sepal_length', data = df, kind = 'violin')\n",
-        "plt.show() # Mention to student how does the width explains us the maximum distribution at that point. "
+        "plt.show() #The width explains us the maximum distribution at that point. "
       ]
     },
     {
